--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,13 @@
     <com.vip.mprogress.MileageProgress
         android:id="@+id/mp_view"
         android:layout_width="200dp"
-        android:layout_height="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:mp_default_progress="80"
+        app:mp_warn_progress="50" />
 
     <Button
         android:id="@+id/btn_test"
