--- a/progress/src/main/res/values/attrs.xml
+++ b/progress/src/main/res/values/attrs.xml
@@ -9,11 +9,11 @@
         <!--        渐变颜色-->
         <attr name="mp_anamorphism_color" format="reference" />
         <!--        最大进度-->
-        <attr name="mp_max_progress" format="float" />
+        <attr name="mp_max_progress" format="integer" />
         <!--        默认进度-->
-        <attr name="mp_default_progress" format="float" />
+        <attr name="mp_default_progress" format="integer" />
         <!--        告警进度-->
-        <attr name="mp_warn_progress" format="float" />
+        <attr name="mp_warn_progress" format="integer" />
         <!--        告警颜色-->
         <attr name="mp_warn_background" format="color" />
         <!--是否模糊颜色-->
